Added conditional for the number of attempts

--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
 
     <div class="screen1">
 
-      <h1>Jogo da Adivinhação</h1>
-      <p>Adivinhe um número entre 0 e 10</p>
+      <h1>Guess the number</h1>
+      <p>Pick a number between 1 and 10.</p>
 
       <form action="">
         <input id="inputNumber" type="number">
-        <button id="btnTry">Tentar</button>
+        <button id="btnTry">Try</button>
       </form>
 
     </div>
 
     <div class="screen2 hide">
       <h2></h2>
-      <button id="btnReset">Jogar novamente</button>
+      <button id="btnReset">Try again</button>
     </div>
   </main>
 
