--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Montserrat:wght@600&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <title>Jogo Adivinhação</title>
+  <title>Guessing Game</title>
 </head>
 
 <body>
